--- a/index.html
+++ b/index.html
@@ -247,7 +247,21 @@
 </section>
 
 
-<section class="bigsquares">
+<section class="telshow telbigsquares">
+  <div class="telline1">
+    <div class="bigsquare" style="background: #222831;"></div>
+    <div class="bigsquare" style="background: #E8E8E8;"></div>
+  </div>
+</section>
+
+<section class="telshow telbigsquares">
+  <div class="telline2">
+    <div class="bigsquare" style="background: #222831;"></div>
+    <div class="bigsquare" style="background: #E8E8E8;"></div>
+  </div>
+</section>
+
+<section class="bigsquares ls">
   <div class="line1">
   <div class="bigsquare" style="background: #E8E8E8;">
     <img id="image3" src="images/figurka3.svg" alt="figurka3"></img>
@@ -268,7 +282,7 @@
 </section>
 
 
-<section class="bigsquares">
+<section class="bigsquares ls">
   <div class="line2 bs">
   <div class="bigsquare" style="background: #206A5D;">
       <div><img id="image7" src="images/figurka7.svg" alt="belayakoroleva"></img></div>
