--- a/index.html
+++ b/index.html
@@ -256,8 +256,15 @@
 
 <section class="telshow telbigsquares">
   <div class="telline2">
-    <div class="bigsquare" style="background: #222831;"></div>
-    <div class="bigsquare" style="background: #E8E8E8;"></div>
+
+    <div class="bigsquare" style="background: #E8E8E8;">
+      <img id="telfigurka3" src="images/figurka3.svg" alt="telfigurka3"></img>
+    </div>
+
+    <div class="bigsquare" style="background: #206A5D;">
+      <img id="telbelayakoroleva" src="images/figurka4.svg" alt="telbelayakoroleva"></img>
+    </div>
+
   </div>
 </section>
 
