--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
   <div class="telline2">
 
     <div class="bigsquare" style="background: #E8E8E8;">
-      <img id="telfigurka3" src="images/figurka3.svg" alt="telfigurka3"></img>
+      <img id="image3" src="images/telfigurka3.svg" alt="telfigurka3"></img>
     </div>
 
     <div class="bigsquare" style="background: #206A5D;">
-      <img id="telbelayakoroleva" src="images/figurka4.svg" alt="telbelayakoroleva"></img>
+      <img id="image4" src="images/telbelayakoroleva.svg" alt="telbelayakoroleva"></img>
     </div>
 
   </div>
