--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 <section class="littlesquares">
   <div class="littlesquare" style="background: #222831;">
-       <div class="whiteladya"><img class="image1" src="images/belayaladya.svg" alt="belayaladya"></img></div>
+       <div id="image1" class="whiteladya"><img class="image1" src="images/belayaladya.svg" alt="belayaladya"></img></div>
      </div>
 
      <div class="littlesquare" style="background: #E8E8E8;">
