--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <div class="littlesquare ls" style="background: #E8E8E8;"></div>
   <div class="litlittlesquare ls" style="background: #222831;"></div>
   <div class="littlesquare ls" style="background: #222831;">
-     <div class="koroleva"></div>
+    <div class="koroleva"><img class="image2" src="images/belayakoroleva.svg" alt="belayakoroleva"></img></div>
   </div>
 </section>
 
@@ -132,7 +132,7 @@
      <div class="littlesquare ls" style="background: #E8E8E8;"></div>
      <div class="littlesquare ls" style="background: #222831;"></div>
      <div class="littlesquare" style="background: #E8E8E8;">
-          <div class="koroleva"></div>
+  <div class="koroleva"></div
      </div>
 </section>
 
@@ -146,9 +146,7 @@
      <div class="littlesquare ls" style="background: #222831;"></div>
      <div class="littlesquare ls" style="background: #E8E8E8;"></div>
      <div class="littlesquare" style="background: #222831;">
-
-         <div class="koroleva"><img class="image2" src="images/belayakoroleva.svg" alt="belayakoroleva"></img></div>
-
+         <div class="koroleva">
      </div>
 </section>
 
