--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
    <div class="littlesquare ls" style="background: #E8E8E8;"></div>
    <div class="littlesquare ls" style="background: #222831;">
 
-     <div class="horse"><img class="image11" src="images/horse.svg" alt=""></img></div>
+     <div class="horse"><img id="image11" src="images/horse.svg" alt=""></img></div>
    </div>
 
    <div class="littlesquare ls" style="background: #E8E8E8;"></div>
@@ -377,7 +377,7 @@
    </div>
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
-   <div class="littlesquare" style="background: #E8E8E8;"></div>
+   <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
 </section>
