--- a/index.html
+++ b/index.html
@@ -322,13 +322,14 @@
 
 
      <div class="littlesquare ls" style="background: #E8E8E8;">
-       <div class="horse"></div>
+
      </div>
      <div class="littlesquare ls" style="background: #222831;">
-       <div class="horse"></div>
+       <div class="horse"><img id="image11" src="images/horse.svg" alt=""></img></div>
+
      </div>
      <div class="littlesquare ls" style="background: #222831;">
-       <div class="horse"></div>
+
      </div>
 </section>
 
@@ -338,17 +339,17 @@
    <div class="littlesquare ls" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare ls" style="background: #E8E8E8;"></div>
-   <div class="littlesquare ls" style="background: #222831;">
-
-     <div class="horse"><img id="image11" src="images/horse.svg" alt=""></img></div>
-   </div>
-
+   <div class="littlesquare ls" style="background: #222831;"></div>
    <div class="littlesquare ls" style="background: #E8E8E8;"></div>
    <div class="littlesquare ls" style="background: #222831;"></div>
 
     <div class="littlesquare telshow last4" style="background: #222831;"></div>
-    <div class="littlesquare telshow last5" style="background: #222831;"></div>
-    <div class="littlesquare telshow last6" style="background: #222831;"></div>
+    <div class="littlesquare telshow last5" style="background: #222831;">
+
+    </div>
+    <div class="littlesquare telshow last6" style="background: #222831;">
+      <div class="horse"></div>
+    </div>
     <div class="littlesquare telshow last7" style="background: #222831;"></div>
 </section>
 
@@ -362,8 +363,12 @@
    <div class="littlesquare " style="background: #222831;"></div>
    <div class="littlesquare ls" style="background: #222831;"></div>
    <div class="littlesquare ls" style="background: #E8E8E8;"></div>
-   <div class="littlesquare ls" style="background: #222831;"></div>
-   <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+   <div class="littlesquare ls" style="background: #222831;">
+     <div class="horse"></div>
+   </div>
+   <div class="littlesquare ls" style="background: #E8E8E8;">
+     <div class="horse"></div>
+   </div>
    <div class="littlesquare telshow" style="background: #206A5D;"></div>
 </section>
 
