--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
    </div>
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #222831;">
-      <p class="phonenumber" style="color: #FFFFFF; font-family: 'Roboto', sans-serif; font-weight: regular; font-size: 1.1rem; margin-left: 3.8em; margin-top: 2.4em;">+7 912 723 09 03 <br>Blablalib.com</p>
+      <p class="phonenumber" style="color: #FFFFFF; font-family: 'Roboto', sans-serif; font-weight: regular; ">+7 912 723 09 03 <br>Blablalib.com</p>
    </div>
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
@@ -392,7 +392,7 @@
     <div class="blackqueen"></div>
   </div>
    <div class="littlesquare" style="background: #E8E8E8;">
-     <p class="zhdyom" style="color: #FFFFFF; font-family: 'Roboto', sans-serif; font-weight: bold; font-size: 3rem; margin-left: 4.6em; margin-top: 0;">Ждём тебя <br>
+     <p class="zhdyom" style="color: #FFFFFF; font-family: 'Roboto', sans-serif; font-weight: bold; ">Ждём тебя <br>
 с нетерпением!</p>
    </div>
    <div class="littlesquare" style="background: #222831;"></div>
