--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
   <div class="littlesquare ls" style="background: #E8E8E8;"></div>
   <div class="litlittlesquare ls" style="background: #222831;"></div>
   <div class="littlesquare ls" style="background: #222831;">
-    <div class="koroleva"><img class="image2" src="images/belayakoroleva.svg" alt="belayakoroleva"></img></div>
+    <div class="koroleva"><img id="image2" src="images/belayakoroleva.svg" alt="belayakoroleva"></img></div>
   </div>
 </section>
 
 <section class="littlesquares">
   <div class="littlesquare" style="background: #222831;">
-       <div id="image1" class="whiteladya"><img class="image1" src="images/belayaladya.svg" alt="belayaladya"></img></div>
+       <div class="whiteladya"><img id="image1" class="image1" src="images/belayaladya.svg" alt="belayaladya"></img></div>
      </div>
 
      <div class="littlesquare" style="background: #E8E8E8;">
