--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <div class="littlesquare ls" style="background: #222831;"></div>
   <div class="littlesquare ls" style="background: #E8E8E8;"></div>
   <div class="littlesquare ls" style="background: #222831;"></div>
-  <div class="littlesquare telshow" style="background: #222831;"> <img class="telkoroleva" src="images/telkoroleva.svg" alt=""> </div>
+  <div class="littlesquare telshow telkoroleva" style="background: #222831;"> <img id="telkoroleva" src="images/telkoroleva.svg" alt=""> </div>
 </section>
 
 
@@ -100,7 +100,7 @@
 
 
 <section class="littlesquares">
-  <div class="littlesquare" style="background: #E8E8E8;"><img class="telshow chornayaladya" src="images/chornayaladya.svg" alt=""></div>
+  <div class="littlesquare" style="background: #E8E8E8;"><img id="chornayaladya" src="images/chornayaladya.svg" alt=""></div>
   <div class="littlesquare telshow" style="background: #206A5D;"></div>
   <div class="littlesquare ls" style="background: #222831;"></div>
   <div class="littlesquare" style="background: #E8E8E8;"></div>
