--- a/index.html
+++ b/index.html
@@ -309,15 +309,15 @@
 
 
 <section class="lastsquares">
-  <div class="littlesquare last1" style="background: #222831;"></div>
+  <div class="littlesquare telshow" style="background: #222831;"></div>
      <div class="littlesquare ls" style="background: #222831;"></div>
-     <div class="littlesquare last2" style="background: #E8E8E8;"></div>
      <div class="littlesquare ls" style="background: #E8E8E8;"></div>
-     <div class="littlesquare last3" style="background: #222831;"></div>
-      <div class="littlesquare telshow last4" style="background: #E8E8E8;"></div>
-       <div class="littlesquare telshow last5" style="background: #222831;"></div>
-       <div class="littlesquare telshow last6" style="background: #E8E8E8;"></div>
-        <div class="littlesquare telshow last7" style="background: #222831;"></div>
+     <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+     <div class="littlesquare ls" style="background: #222831;"></div>
+      <div class="littlesquare telshow " style="background: #E8E8E8;"></div>
+       <div class="littlesquare telshow " style="background: #222831;"></div>
+       <div class="littlesquare telshow " style="background: #E8E8E8;"></div>
+
 
 
 
@@ -338,19 +338,11 @@
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare ls" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
-   <div class="littlesquare ls" style="background: #E8E8E8;"></div>
+   <div class="littlesquare" style="background: #E8E8E8;"></div>
    <div class="littlesquare ls" style="background: #222831;"></div>
    <div class="littlesquare ls" style="background: #E8E8E8;"></div>
    <div class="littlesquare ls" style="background: #222831;"></div>
 
-    <div class="littlesquare telshow last4" style="background: #222831;"></div>
-    <div class="littlesquare telshow last5" style="background: #222831;">
-
-    </div>
-    <div class="littlesquare telshow last6" style="background: #222831;">
-      <div class="horse"></div>
-    </div>
-    <div class="littlesquare telshow last7" style="background: #222831;"></div>
 </section>
 
 
