--- a/index.html
+++ b/index.html
@@ -310,10 +310,13 @@
 
 <section class="lastsquares">
   <div class="littlesquare telshow" style="background: #222831;"></div>
+  <div class="littlesquare ls" style="background: #222831;"></div>
      <div class="littlesquare ls" style="background: #222831;"></div>
      <div class="littlesquare ls" style="background: #E8E8E8;"></div>
      <div class="littlesquare ls" style="background: #E8E8E8;"></div>
      <div class="littlesquare ls" style="background: #222831;"></div>
+    
+
       <div class="littlesquare telshow " style="background: #E8E8E8;"></div>
        <div class="littlesquare telshow " style="background: #222831;"></div>
        <div class="littlesquare telshow " style="background: #E8E8E8;"></div>
