--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 <section class="littlesquares ls">
   <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
+     <div class="littlesquare cc"></div>
      <div class="littlesquare" style="background: #E8E8E8;"></div>
      <div class="littlesquare" style="background: #222831;"></div>
      <div class="littlesquare ls" style="background: #E8E8E8;"></div>
@@ -193,7 +193,7 @@
      <div class="littlesquare" style="background: #E8E8E8;"></div>
      <div class="littlesquare" style="background: #222831;"></div>
      <div class="littlesquare" style="background: #E8E8E8;"></div>
-     <div class="littlesquare" style="background: #222831;"></div>
+     <div class="littlesquare cc"></div>
 </section>
 
 
