--- a/index.html
+++ b/index.html
@@ -366,9 +366,7 @@
 </section>
 
 <section class="lastsquares ls">
-  <div class="littlesquare" style="background: #E8E8E8;">
-     <div class="blackqueen"><img id="image12" src="images/figurka12.svg" alt="chornayakoroleva"></img></div>
-   </div>
+  <div class="littlesquare" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #222831;">
       <p class="phonenumber" style="color: #FFFFFF; font-family: 'Roboto', sans-serif; font-weight: regular; ">+7 912 723 09 03 <br>Blablalib.com</p>
@@ -382,13 +380,15 @@
 
 <section class="lastsquares ls">
   <div class="littlesquare" style="background: #222831;">
-    <div class="blackqueen"></div>
+     <div class="blackqueen"><img id="image12" src="images/figurka12.svg" alt="chornayakoroleva"></img></div>
   </div>
    <div class="littlesquare" style="background: #E8E8E8;">
      <p class="zhdyom" style="color: #FFFFFF; font-family: 'Roboto', sans-serif; font-weight: bold; ">Ждём тебя <br>
 с нетерпением!</p>
    </div>
-   <div class="littlesquare" style="background: #222831;"></div>
+   <div class="littlesquare" style="background: #222831;">
+
+   </div>
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare" style="background: #E8E8E8;"></div>
@@ -397,7 +397,9 @@
 </section>
 
 <section class="lastsquares ls">
-  <div class="littlesquare" style="background: #222831;"></div>
+  <div class="littlesquare" style="background: #222831;">
+    <div class="blackqueen"></div>
+  </div>
   <div class="littlesquare" style="background: #222831;"></div>
   <div class="littlesquare" style="background: #E8E8E8;"></div>
   <div class="littlesquare" style="background: #222831;"></div>
