--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 
 <section class="littlesquares ls">
-  <div class="littlesquare" style="background: #222831;"></div>
+  <div class="littlesquare cc"></div>
     <div class="littlesquare" style="background: #E8E8E8;"></div>
     <div class="littlesquare" style="background: #222831;"></div>
     <div class="littlesquare" style="background: #E8E8E8;"></div>
