--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@
   <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare ls" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;">
-       <p class="basmannaya" style="color: #FFFFFF; font-family: 'Roboto', sans-serif;  font-weight: regular; font-size: 1.1rem; margin-left: 3.8em; margin-top: 4.75em;">Ул. Басманная, 10 <br>Вход свободный</p>
+       <p class="basmannaya" style="color: #FFFFFF; font-family: 'Roboto', sans-serif;  font-weight: regular;">Ул. Басманная, 10 <br>Вход свободный</p>
+<p class="telshow phonenumbertel">+7 912 723 09 03 <br>Blablalib.com</p>
    </div>
    <div class="littlesquare " style="background: #222831;"></div>
    <div class="littlesquare ls" style="background: #222831;"></div>
