--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@
   <div class="littlesquare" style="background: #222831;"></div>
    <div class="littlesquare ls" style="background: #E8E8E8;"></div>
    <div class="littlesquare" style="background: #222831;">
-       <p class="basmannaya ls" style="color: #FFFFFF; font-family: 'Roboto', sans-serif;  font-weight: regular;">Ул. Басманная, 10 <br>Вход свободный</p>
-<p class="telshow basmannaya1">Ул. Басманная, 10 <br>Вход свободный <br> +7 912 723 09 03 <br>Blablalib.com</p>
+       <p class="basmannaya " style="color: #FFFFFF; font-family: 'Roboto', sans-serif;  font-weight: regular;">Ул. Басманная, 10 <br>Вход свободный</p>
+
    </div>
    <div class="littlesquare " style="background: #222831;"></div>
    <div class="littlesquare ls" style="background: #222831;"></div>
